<resources>
    <string name="app_name">RoynaldiWallet</string>
    <string name="title_register_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="first_name">Nama Depan</string>
    <string name="last_name">Nama Belakang</string>
    <string name="email">Email</string>
    <string name="register">Daftar</string>
    <string name="password">Password</string>
    <string name="validasi_password">Password minimal 6 karakter</string>
    <string name="copyright">Roynaldi</string>
    <string name="title_welcome_page">Selamat Datang</string>
    <string name="message_welcome_page">NuTech Wallet</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Siap untuk masuk Nutech Wallet</string>
    <string name="login">Masuk</string>
    <string name="logout">Keluar</string>
    <string name="update_profile">Update Profile</string>
    <string name="amount">Amount</string>
    <string name="time">Time</string>
    <string name="type">Type</string>
    <string name="title_update_page">Ubah Data kamu</string>
    <string name="update">Ubah</string>
    <string name="title_topup_page">Masukan Nilai Top Up</string>
    <string name="nilai_top_up">Nilai Top Up</string>
    <string name="top_up">Top Up</string>
    <string name="transfer">Transfer</string>
    <string name="validasi_nilai">Nilai minimal adalah 10000</string>
    <string name="history_transaksi">History Transaksi</string>
    <string name="balance_nilai">0</string>
    <string name="balance">Saldo Rp.</string>
    <string name="nama">Nama</string>
    <string name="title_transfer_page">Masukan Nilai Transfer</string>
    <string name="nilai_transfer">Nilai Transfer</string>
    <string name="balance_transfer">Saldo</string>

</resources>